Still trying to fix list element font + spacing

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ ul.posts li {
 }
 
 li {
-    font-size: 12px;
+    font-size: 3.75vmin;
     letter-spacing: 0.1em;
 }
 
